*Rails 3.1.0 (unreleased)*

* Direct logging of Active Record to STDOUT so it's shown inline with the results in the console [DHH]

* Added `config.force_ssl` configuration which loads Rack::SSL middleware and force all requests to be under HTTPS protocol [DHH, Prem Sichanugrist, and Josh Peek]

* Added `rails plugin new` command which generates rails plugin with gemspec, tests and dummy application for testing [Piotr Sarnacki]

* Added -j parameter with jquery/prototype as options. Now you can create your apps with jQuery using `rails new myapp -j jquery`. The default is still Prototype. [siong1987]

* Added Rack::Etag and Rack::ConditionalGet to the default middleware stack [José Valim]

* Added Rack::Cache to the default middleware stack [Yehuda Katz and Carl Lerche]

* Engine is now rack application [Piotr Sarnacki]

* Added middleware stack to Engine [Piotr Sarnacki]

* Engine can now load plugins [Piotr Sarnacki]

* Engine can load its own environment file [Piotr Sarnacki]

* Added helpers to call engines' route helpers from application and vice versa [Piotr Sarnacki]

* Task for copying plugins' and engines' migrations to application's db/migrate directory [Piotr Sarnacki]

* Changed ActionDispatch::Static to allow handling multiple directories [Piotr Sarnacki]

* Added isolate_namespace() method to Engine, which sets Engine as isolated [Piotr Sarnacki]

* Include all helpers from plugins and shared engines in application [Piotr Sarnacki]

*Rails 3.0.1 (October 15, 2010)*

* No Changes, just a version bump.

*Rails 3.0.0 (August 29, 2010)*

* Application generation: --skip-testunit and --skip-activerecord become --skip-test-unit and --skip-active-record respectively. [fxn]

* Added console to Rails::Railtie as a hook called just after console starts. [José Valim]

* Rails no longer autoload code in lib for application. You need to explicitly require it. [José Valim]

* Rails::LogSubscriber was renamed to ActiveSupport::LogSubscriber [José Valim]
