@@ -5,7 +5,6 @@ require 'active_support/testing/deprecation'
 require 'active_support/testing/declarative'
 require 'active_support/testing/pending'
 require 'active_support/testing/isolation'
-require 'active_support/testing/turn_formatting'
 require 'active_support/testing/mochaing'
 require 'active_support/core_ext/kernel/reporting'
 
