@@ -22,6 +22,7 @@ Gem::Specification.new do |s|
   s.add_dependency('rake',          '>= 0.8.7')
   s.add_dependency('thor',          '~> 0.14.4')
   s.add_dependency('rack-ssl',      '~> 1.3.2')
+  s.add_dependency('turn',          '~> 0.8.2')
   s.add_dependency('activesupport', version)
   s.add_dependency('actionpack',    version)
 end
